--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,5 @@
 <project>
-	<modelVersion>4.0.0</modelversion>
+	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.skat</groupId>
 	<artifactId>travisTesting</artifactId>
 	<version>0.1</version>
