--- a/pom.xml
+++ b/pom.xml
@@ -1,6 +1,14 @@
 <project>
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.skat</groupId>
-	<artifactId>travisTesting</artifactId>
-	<version>0.1</version>
+	<artifactId>travistesting</artifactId>
+	<version>1.0-SNAPSHOT</version>
+	<dependencies>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.11</version>
+			<scope>test</scope>
+		</dependency>
+	</dependencies>
 </project>
