--- a/pom.xml
+++ b/pom.xml
@@ -7,18 +7,18 @@
 		<dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>4.8.1</version>
+            <version>4.9</version>
             <scope>test</scope>
         </dependency>
 		<dependency>
 			<groupId>org.junit.jupiter</groupId>
 			<artifactId>junit-jupiter-engine</artifactId>
-			<version>5.0.0</version>
+			<version>5.0.0-M1</version>
 		</dependency>
 		<dependency>
 			<groupId>org.junit.platform</groupId>
 			<artifactId>junit-platform-runner</artifactId>
-			<version>1.0.0</version>
+			<version>1.0.0-M1</version>
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
