--- a/pom.xml
+++ b/pom.xml
@@ -3,6 +3,10 @@
 	<groupId>com.skat</groupId>
 	<artifactId>travistesting</artifactId>
 	<version>1.0-SNAPSHOT</version>
+	<properties>
+		<junit.jupiter.version>5.0.0-M4</junit.jupiter.version>
+		<junit.platform.version>1.0.0-M4</junit.platform.version>
+	</properties>
 	<dependencies>
 		<dependency>
             <groupId>junit</groupId>
@@ -13,12 +17,12 @@
 		<dependency>
 			<groupId>org.junit.jupiter</groupId>
 			<artifactId>junit-jupiter-engine</artifactId>
-			<version>5.0.0-M1</version>
+			<version>${junit.jupiter.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.junit.platform</groupId>
 			<artifactId>junit-platform-runner</artifactId>
-			<version>1.0.0-M1</version>
+			<version>${junit.platform.version}</version>
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
