--- a/pom.xml
+++ b/pom.xml
@@ -6,12 +6,13 @@
 	<properties>
 		<junit.jupiter.version>5.0.0-M6</junit.jupiter.version>
 		<junit.platform.version>1.0.0-M6</junit.platform.version>
+		<junit.version>4.9</junit.version>
 	</properties>
 	<dependencies>
 		<dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>4.9</version>
+            <version>${junit.version}</version>
             <scope>test</scope>
         </dependency>
 		<dependency>
